Swagger recovered
