# internal/http/methods.go
@@ -9,272 +9,312 @@ import (
 	"autoflow/pkg/storage/search"
 	"autoflow/pkg/storage/storage"
 	"github.com/gin-gonic/gin"
+	"net/http"
 )
 
-// Call godoc
-// @Summary executes callback
-// @Id Call
-// @Accept  json
-// @Produce  json
-// @Param request body engine.Request true "request"
-// @Success 200 {object} engine.Response
-// @Router /call [post]
-func (c *Controller) Call(g *gin.Context) {
-	c.DoCall(g, c.callback.Call, func() (interface{}, error) {
-		obj := &call.Request{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+//@router /callback [post]
+//@param request body call.CallbackRequest true "callback"
+//@success 200 {object} call.CallbackResponse
+func (c *Controller) Callback(g *gin.Context) {
+	req := &call.CallbackRequest{}
+	err := g.Bind(req)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.callback.Call(g, req)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// ListGraph godoc
-// @Summary lists graphs
-// @Id ListGraph
-// @Accept  json
-// @Produce  json
-// @Param projectId query []int true "project ids"
-// @Success 200 {object} storage.ListGraphResponse
-// @Router /list-graphs [get]
+//@router /graph/list [get]
+//@param projectId query []int true "project ids"
+//@success 200 {object} storage.ListGraphResponse
 func (c *Controller) ListGraph(g *gin.Context) {
-	c.DoCall(g, c.storage.ListGraph, func() (interface{}, error) {
-		obj := &storage.ListGraphRequest{}
-		err := g.BindQuery(obj)
-		return obj, err
-	})
+	obj := &storage.ListGraphRequest{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.storage.ListGraph(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// GetGraph godoc
-// @Summary gets graph with Nodes, Connections and EventCards
-// @Id GetGraph
-// @Accept  json
-// @Produce  json
-// @Param projectId query int true "project id"
-// @Param id query int true "graph id"
-// @Success 200 {object} graph.DBGraph
-// @Router /graph [get]
+//@router /graph [get]
+//@param projectId query int true "project id"
+//@param graphId query int true "graph id"
+//@success 200 {object} graph.DBGraph
 func (c *Controller) GetGraph(g *gin.Context) {
-	c.DoCall(g, c.storage.GetGraph, func() (interface{}, error) {
-		obj := &graph.IDGraph{}
-		err := g.BindQuery(obj)
-		return obj, err
-	})
+	obj := &common.ProjectModel{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.storage.GetGraph(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// BatchSave godoc
-// @Summary saves new Nodes, Connections and EventCards
-// @Id BatchSave
-// @Accept  json
-// @Produce  json
-// @Param request body batch.SaveRequest true "request"
-// @Success 200 {object} batch.SaveResponse
-// @Router /batch [post]
+//@router /batch [post]
+//@param body body batch.SaveRequest true "save request"
+//@success 200 {object} batch.SaveResponse
 func (c *Controller) BatchSave(g *gin.Context) {
-	c.DoCall(g, c.batch.Save, func() (interface{}, error) {
-		obj := &batch.SaveRequest{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &batch.SaveRequest{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.batch.Save(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// BatchDelete godoc
-// @Summary deletes all Nodes, Connections and EventCards from the graph
-// @Id BatchDelete
-// @Accept  json
-// @Produce  json
-// @Param request body batch.DeleteRequest true "request"
-// @Success 200 {object} batch.DeleteResponse
-// @Router /batch [delete]
+//@router /batch [delete]
+//@param body body batch.DeleteRequest true "delete request"
+//@success 200 {string} string "ok"
 func (c *Controller) BatchDelete(g *gin.Context) {
-	c.DoCall(g, c.batch.Delete, func() (interface{}, error) {
-		obj := &batch.DeleteRequest{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &batch.DeleteRequest{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	err = c.batch.Delete(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, "ok")
 }
 
-// FindActive godoc
-// @Summary finds graphs that would activate for event
-// @Id FindActive
-// @Accept  json
-// @Produce  json
-// @Param request body search.FindActiveRequest true "request"
-// @Success 200 {object} search.FindActiveResponse
-// @Router /find-active [post]
+//@router /find-active [post]
+//@param body body search.FindActiveRequest true "active event"
+//@success 200 {object} search.FindActiveResponse
 func (c *Controller) FindActive(g *gin.Context) {
-	c.DoCall(g, c.search.FindActive, func() (interface{}, error) {
-		obj := &search.FindActiveRequest{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &search.FindActiveRequest{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.search.FindActive(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// SaveGraph godoc
-// @Summary saves or updates graph. Nodes, Connections and EventCards are ignored
-// @Id SaveGraph
-// @Accept  json
-// @Produce  json
-// @Param request body graph.DBGraph true "request"
-// @Success 200 {object} graph.DBGraph
-// @Router /graph [post]
+//@router /graph [post]
+//@param body body graph.DBGraph true "graph"
+//@success 200 {object} graph.DBGraph
 func (c *Controller) SaveGraph(g *gin.Context) {
-	c.DoCall(g, c.storage.SaveGraph, func() (interface{}, error) {
-		obj := &graph.DBGraph{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.DBGraph{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.storage.SaveGraph(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// SaveNode godoc
-// @Summary saves or updates node
-// @Id SaveNode
-// @Accept  json
-// @Produce  json
-// @Param request body graph.DBNode true "request"
-// @Success 200 {object} graph.DBNode
-// @Router /node [post]
+//@router /node [post]
+//@param body body graph.DBNode true "node"
+//@success 200 {object} graph.DBNode
 func (c *Controller) SaveNode(g *gin.Context) {
-	c.DoCall(g, c.storage.SaveNode, func() (interface{}, error) {
-		obj := &graph.DBNode{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.DBNode{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.storage.SaveNode(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// SaveConnection godoc
-// @Summary saves or updates Connection
-// @Id SaveConnection
-// @Accept  json
-// @Produce  json
-// @Param request body graph.DBConnection true "request"
-// @Success 200 {object} graph.DBConnection
-// @Router /connection [post]
+//@router /connection [post]
+//@param body body graph.DBConnection true "connection"
+//@success 200 {object} graph.DBConnection
 func (c *Controller) SaveConnection(g *gin.Context) {
-	c.DoCall(g, c.storage.SaveConnection, func() (interface{}, error) {
-		obj := &graph.DBConnection{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.DBConnection{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.storage.SaveConnection(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// SaveEventCard godoc
-// @Summary saves or updates EventCard
-// @Id SaveEventCard
-// @Accept  json
-// @Produce  json
-// @Param request body graph.DBEventCard true "request"
-// @Success 200 {object} graph.DBEventCard
-// @Router /event-card [post]
+//@router /event-card [post]
+//@param body body graph.DBEventCard true "connection"
+//@success 200 {object} graph.DBEventCard
 func (c *Controller) SaveEventCard(g *gin.Context) {
-	c.DoCall(g, c.storage.SaveEventCard, func() (interface{}, error) {
-		obj := &graph.DBEventCard{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.DBEventCard{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.storage.SaveEventCard(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// DeleteGraph godoc
-// @Summary deletes graph and all related Nodes, Connections and EventCards
-// @Id DeleteGraph
-// @Accept  json
-// @Produce  json
-// @Param request body graph.IDGraph true "request"
-// @Router /graph [delete]
+//@router /graph [delete]
+//@param body body common.ProjectModel true "graph id"
+//@success 200 {string} string "ok"
 func (c *Controller) DeleteGraph(g *gin.Context) {
-	c.DoCall(g, c.storage.DeleteGraph, func() (interface{}, error) {
-		obj := &common.ProjectModel{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &common.ProjectModel{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	err = c.storage.DeleteGraph(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, "ok")
 }
 
-// DeleteNode godoc
-// @Summary deletes Node
-// @Id DeleteNode
-// @Accept  json
-// @Produce  json
-// @Param request body graph.IDGraph true "request"
-// @Router /node [delete]
+//@router /node [delete]
+//@param body body graph.GraphObject true "node id"
+//@success 200 {string} string "ok"
 func (c *Controller) DeleteNode(g *gin.Context) {
-	c.DoCall(g, c.storage.DeleteNode, func() (interface{}, error) {
-		obj := &graph.IDGraph{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.GraphObject{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	err = c.storage.DeleteNode(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, "ok")
 }
 
-// DeleteConnection godoc
-// @Summary deletes Connection
-// @Id DeleteConnection
-// @Accept  json
-// @Produce  json
-// @Param request body graph.IDGraph true "request"
-// @Router /connection [delete]
+//@router /connection [delete]
+//@param body body graph.GraphObject true "connection id"
+//@success 200 {string} string "ok"
 func (c *Controller) DeleteConnection(g *gin.Context) {
-	c.DoCall(g, c.storage.DeleteConnection, func() (interface{}, error) {
-		obj := &graph.IDGraph{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.GraphObject{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	err = c.storage.DeleteConnection(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, "ok")
 }
 
-// DeleteEventCard godoc
-// @Summary deletes EventCard
-// @Id DeleteEventCard
-// @Accept  json
-// @Produce  json
-// @Param request body graph.IDGraph true "request"
-// @Router /event-card [delete]
+//@router /event-card [delete]
+//@param body body graph.GraphObject true "event card id"
+//@success 200 {string} string "ok"
 func (c *Controller) DeleteEventCard(g *gin.Context) {
-	c.DoCall(g, c.storage.DeleteEventCard, func() (interface{}, error) {
-		obj := &graph.IDGraph{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &graph.GraphObject{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	err = c.storage.DeleteEventCard(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, "ok")
 }
 
-// ListEndpoint godoc
-// @Summary lists endpoints
-// @Id ListEndpoint
-// @Accept  json
-// @Produce  json
-// @Param projectId query int true "project ids"
-// @Success 200 {object} endpoint.Container
-// @Router /list-module [get]
+//@router /endpoint/list [get]
+//@param projectId query int true "project id"
+//@success 200 {object} endpoint.Container
 func (c *Controller) ListEndpoint(g *gin.Context) {
-	c.DoCall(g, c.endpoint.List, func() (interface{}, error) {
-		obj := &common.ProjectModel{}
-		err := g.BindQuery(obj)
-		return obj, err
-	})
+	obj := &common.ProjectSpace{}
+	err := g.BindQuery(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.endpoint.List(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// SaveEndpoint godoc
-// @Summary saves Module
-// @Id SaveEndpoint
-// @Accept  json
-// @Produce  json
-// @Param request body endpoint.DBEndpoint true "request"
-// @Success 200 {object} endpoint.DBEndpoint
-// @Router /module [post]
+//@router /endpoint [post]
+//@param body body endpoint.DBEndpoint true "endpoint"
+//@success 200 {object} endpoint.DBEndpoint
 func (c *Controller) SaveEndpoint(g *gin.Context) {
-	c.DoCall(g, c.endpoint.Save, func() (interface{}, error) {
-		obj := &endpoint.DBEndpoint{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &endpoint.DBEndpoint{}
+	err := g.BindJSON(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	res, err := c.endpoint.Save(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, res)
 }
 
-// DeleteEndpoint godoc
-// @Summary deletes Module
-// @Id DeleteEndpoint
-// @Accept  json
-// @Produce  json
-// @Param request body common.ProjectModel true "request"
-// @Router /module [delete]
+//@router /endpoint [delete]
+//@param body body common.ProjectModel true "endpoint id"
+//@success 200 {string} string "ok"
 func (c *Controller) DeleteEndpoint(g *gin.Context) {
-	c.DoCall(g, c.endpoint.Delete, func() (interface{}, error) {
-		obj := &common.ProjectModel{}
-		err := g.BindJSON(obj)
-		return obj, err
-	})
+	obj := &common.ProjectModel{}
+	err := g.Bind(obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	err = c.endpoint.Delete(g, obj)
+	if err != nil {
+		_ = g.Error(err)
+		return
+	}
+	g.JSON(http.StatusOK, "ok")
 }
