# pkg/engine/call/controller.go
@@ -4,13 +4,13 @@ import (
 	"autoflow/pkg/storage/graph"
 )
 
-type Request struct {
+type CallbackRequest struct {
 	Event      graph.DataEvent        `json:"event,omitempty"`
 	Context    map[string]interface{} `json:"context,omitempty"`
 	RawRequest interface{}            `json:"raw,omitempty"`
 }
 
-type Response struct {
+type CallbackResponse struct {
 	Response     interface{} `json:"response,omitempty"`
 	Error        string      `json:"error,omitempty"`
 	Timeout      bool        `json:"timeout,omitempty"`
